<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.hyderabadtourguide.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/myAppBar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/collapsing_appbar_margin_end"
            app:expandedTitleMarginStart="@dimen/collapsing_appbar_margin_start"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbarImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/normal_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/mainView_end_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/overviewHeader"
                style="@style/HeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overviewHeader" />

            <TextView
                android:id="@+id/overview"
                style="@style/DescStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/historyHeader"
                style="@style/HeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyHeader" />

            <TextView
                android:id="@+id/history"
                style="@style/DescStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/showPlacesFAB"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/mainLayout"
        app:layout_anchorGravity="top|right"
        android:src="@mipmap/ic_view_list_white_24dp"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>