<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.hyderabadtourguide.LocationDetailActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/myAppBar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/collapsing_appbar_margin_start"
            app:expandedTitleMarginEnd="@dimen/collapsing_appbar_margin_end"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_margin"
        android:paddingBottom="@dimen/detailView_end_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@style/detail_item_desc" />


            <LinearLayout
                android:id="@+id/timingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description">

                <TextView
                    android:id="@+id/timingsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_item_label"
                    android:text="@string/timings"/>

                <TextView
                    android:id="@+id/timingsView"
                    style="@style/detail_item_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ticketLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timingsLayout">

                <TextView
                    android:id="@+id/ticketLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_item_label"
                    android:text="@string/fare" />

                <TextView
                    android:id="@+id/ticketView"
                    style="@style/detail_item_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contactDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ticketLayout">

                <TextView
                    android:id="@+id/contactLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_item_label"
                    android:text="@string/contact"/>

                <TextView
                    android:id="@+id/contactView"
                    style="@style/detail_item_text" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/showLocationFAB"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/mainLayout"
        app:layout_anchorGravity="top|right"
        android:src="@mipmap/ic_place_white_24dp"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>
</android.support.design.widget.CoordinatorLayout>

